Bug fixes & beautifications
- Fixed a bug where the gallery menu would be clickable when invisible. (this removed the animation, might wanna look into this again)
- fixed it-article previews overlapping the footer
- gave the about-me text more space the breath
- moved the gallery single view artist & project title to the left by 1rem
- sized up the slideshows by 20%
- moved left & right buttons out of the slideshows
- removed slideshow page count at the top left
- moved slideshow label below the image
- made the images of it-preview 70% transparent with hover effect.
- gave the it-article close button a fixed width to keep the distance to the wall steady

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ button:hover {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /*********
