--- a/css/style/about-me.css
+++ b/css/style/about-me.css
@@ -27,6 +27,7 @@ About-Me:
 #about-text {
     /* text-align: center; */
     font-size: 1.2rem;
+    padding-top: 6.5rem;
 }
 
 /*********
