--- a/css/style/gallery.css
+++ b/css/style/gallery.css
@@ -158,14 +158,14 @@ gallery:
 #gallery-single-artist-name {
     position: absolute;
     top: 1rem;
-    left: 6.5rem;
+    left: 7.5rem;
     cursor: pointer;
 }
 
 .gallery-single-title {
     position: absolute;
     top: 2.1rem;
-    left: 6.5rem;
+    left: 7.5rem;
     font-family: sans-serif;
     font-weight: normal;
 }
