--- a/css/style/it-experience.css
+++ b/css/style/it-experience.css
@@ -5,7 +5,8 @@ Slideshow:
 /* Slideshow container */
 
 .slideshow-container {
-    width: 80%;
+    /* height: 38rem; */
+    width: 100%;
     max-width: 1000px;
     position: relative;
     margin: auto;
@@ -31,15 +32,22 @@ Slideshow:
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+    border-radius: 3px;
     user-select: none;
 }
 
 /* Position the "next button" to the right */
 
 .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+    right: 0px;
+}
+
+#it-experience .next {
+    right: -2.45em;
+}
+
+#it-experience .prev {
+    left: -2.45em;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -54,24 +62,12 @@ Slideshow:
     color: var(--gallery-icon);
     font-size: 15px;
     padding: 8px 0px;
-    position: absolute;
-    bottom: 8px;
+    position: relative;
     width: 100%;
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
-
-.numbertext {
-    color: var(--gallery-icon);
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
 /* The dots/bullets/indicators */
-
 .dot {
     cursor: pointer;
     height: 15px;
@@ -162,6 +158,7 @@ New System below:
     flex-wrap: wrap;
     width: 70%;
     margin: auto;
+    padding-bottom: .5em;
 }
 
 .it-preview {
@@ -171,6 +168,7 @@ New System below:
     grid-template-columns: repeat(1fr, 2);
     padding: 2rem 0px;
     height: calc(100% - 4rem);
+    margin-top: 0.5rem;
 }
 
 .it-preview.uneven {
@@ -182,10 +180,19 @@ New System below:
 }
 
 .it-preview-img{
-   width: 95%;
-   border-radius: 50%;
-   grid-area: it-img;
-}
+    width: 95%;
+    border-radius: 50%;
+    grid-area: it-img;
+ }
+ 
+ .it-preview-img:not(#it-languages){
+    opacity: 0.7;
+    transition: opacity 0.5s;
+ }
+
+.it-preview-img:not(#it-languages):hover{
+    opacity: 1;
+ }
 
 .it-preview-info-c {
     /* width: max-content; */
@@ -253,7 +260,7 @@ New System below:
     position: fixed;
     top: 1rem;
     right: 1rem;
-    width: 5%;
+    width: 5rem;
     height: 2rem;
     color: var(--gallery-icon);
     font-size: 1.5rem;
